# website-visit-counter

./: ApiManager.py  LoadManager.py  README.md  VisitCounter.py  api_manager.py  api_stat.py  load_manager.py  main.py  pyproject.toml  stats.txt  visit_counter.py  visits.txt
src/: api_manager.py  api_stat.py  image_generator.py  main.py  stat_period.py  stat_type.py  visit_counter.py  vizual.html
tests/: test_api_manager.py  test_image_generaror.py  test_visit_counter.py
