[tool.poetry]
name = "visit-counter"
version = "0.1.0"
description = "Счётчик посещений сайта на aiohttp"
authors = ["Настя Черкашина"]
readme = "README.md"
packages = [{ include = "VisitCounter" }]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.0"
pydantic = "^2.11.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
flake8 = "^6.0"
mypy = "^1.0"
black = "^23.0"
isort = "^5.10"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.12"

[tool.flake8]
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist"
]
max-line-length = 88

enable_error_code = ["truthy-bool", "ignore-without-code"]
check_untyped_defs = true
strict_optional = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
show_column_numbers = true
pretty = true
ignore_missing_imports = true
follow_imports = "normal"
follow_imports_for_stubs = true